third_party/move/move-compiler-v2/tests/lambda/inline-parity/unpack_generic_struct.lambda.exp

Diagnostics:
error: captured value cannot be a reference, but has type `&mut Key`
   ┌─ tests/lambda/inline-parity/unpack_generic_struct.move:38:14
   │
38 │             *v = key;
   │              ^
